// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backtick.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`\` \`123\` \`\`

\`\`12\`34\`\`

\`\` \`12\`\`

\`\`34\` \`\`

\`\` \`\`\`123\`\`\` \`\`

\`\`\` 3 \`\`22\`\` \`1\` \`\`\`

\`\` 2 \`\`\`123\`\`\` \`1\` \`\`

\`\`  CODE\` \`\`

=====================================output=====================================
\`\` \`123\` \`\`

\`\`12\`34\`\`

\`\` \`12\`\`

\`\`34\` \`\`

\` \`\`\`123\`\`\` \`

\`\`\` 3 \`\`22\`\` \`1\` \`\`\`

\`\` 2 \`\`\`123\`\`\` \`1\` \`\`

\`\`  CODE\` \`\`

================================================================================
`;

exports[`backtick.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
\`\` \`123\` \`\`

\`\`12\`34\`\`

\`\` \`12\`\`

\`\`34\` \`\`

\`\` \`\`\`123\`\`\` \`\`

\`\`\` 3 \`\`22\`\` \`1\` \`\`\`

\`\` 2 \`\`\`123\`\`\` \`1\` \`\`

\`\`  CODE\` \`\`

=====================================output=====================================
\`\` \`123\` \`\`

\`\`12\`34\`\`

\`\` \`12\`\`

\`\`34\` \`\`

\` \`\`\`123\`\`\` \`

\`\`\` 3 \`\`22\`\` \`1\` \`\`\`

\`\` 2 \`\`\`123\`\`\` \`1\` \`\`

\`\`  CODE\` \`\`

================================================================================
`;

exports[`cjk.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`const x = "中文123"\`

=====================================output=====================================
\`const x = "中文123"\`

================================================================================
`;

exports[`cjk.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
\`const x = "中文123"\`

=====================================output=====================================
\`const x = "中文123"\`

================================================================================
`;

exports[`escape.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`1*2*3\`

=====================================output=====================================
\`1*2*3\`

================================================================================
`;

exports[`escape.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
\`1*2*3\`

=====================================output=====================================
\`1*2*3\`

================================================================================
`;

exports[`inline-code-multiple-spaces.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`   three   spaces   everywhere   \`

\`   three   spaces
  everywhere   \`

\`   three   spaces 
 everywhere   \`

=====================================output=====================================
\`   three   spaces   everywhere   \`

\`   three   spaces   everywhere   \`

\`   three   spaces   everywhere   \`

================================================================================
`;

exports[`inline-code-multiple-spaces.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
\`   three   spaces   everywhere   \`

\`   three   spaces
  everywhere   \`

\`   three   spaces 
 everywhere   \`

=====================================output=====================================
\`   three   spaces   everywhere   \`

\`   three   spaces
  everywhere   \`

\`   three   spaces 
 everywhere   \`

================================================================================
`;

exports[`inline-code-newline.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod \`tempor
incididunt\` ut labore et dolore magna aliqua. Ut enim ad minim veniam, \`quis
nostrud\` exercitation ullamco laboris nisi ut aliquip ex ea commodo \`consequat.
Duis\` aute irure dolor in reprehenderit in voluptate velit esse cillum dolore \`eu
fugiat\` nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
culpa qui officia deserunt mollit anim id est laborum.

=====================================output=====================================
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
\`tempor incididunt\` ut labore et dolore magna aliqua. Ut enim ad minim veniam,
\`quis nostrud\` exercitation ullamco laboris nisi ut aliquip ex ea commodo
\`consequat. Duis\` aute irure dolor in reprehenderit in voluptate velit esse
cillum dolore \`eu fugiat\` nulla pariatur. Excepteur sint occaecat cupidatat non
proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

================================================================================
`;

exports[`inline-code-newline.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod \`tempor
incididunt\` ut labore et dolore magna aliqua. Ut enim ad minim veniam, \`quis
nostrud\` exercitation ullamco laboris nisi ut aliquip ex ea commodo \`consequat.
Duis\` aute irure dolor in reprehenderit in voluptate velit esse cillum dolore \`eu
fugiat\` nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
culpa qui officia deserunt mollit anim id est laborum.

=====================================output=====================================
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod \`tempor
incididunt\` ut labore et dolore magna aliqua. Ut enim ad minim veniam, \`quis
nostrud\` exercitation ullamco laboris nisi ut aliquip ex ea commodo \`consequat.
Duis\` aute irure dolor in reprehenderit in voluptate velit esse cillum dolore \`eu
fugiat\` nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
culpa qui officia deserunt mollit anim id est laborum.

================================================================================
`;

exports[`long.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`this is a long long long long long long long long long long long long long long long inline code\`

=====================================output=====================================
\`this is a long long long long long long long long long long long long long long long inline code\`

================================================================================
`;

exports[`long.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
\`this is a long long long long long long long long long long long long long long long inline code\`

=====================================output=====================================
\`this is a long long long long long long long long long long long long long long long inline code\`

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`123\`

=====================================output=====================================
\`123\`

================================================================================
`;

exports[`simple.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
\`123\`

=====================================output=====================================
\`123\`

================================================================================
`;

exports[`snippet: #0 - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\` 
 \`
=====================================output=====================================
\`   \`

================================================================================
`;

exports[`snippet: #0 - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
\` 
 \`
=====================================output=====================================
\` 
 \`

================================================================================
`;

exports[`snippet: #1 - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\` 
a  \`
=====================================output=====================================
\`  a  \`

================================================================================
`;

exports[`snippet: #1 - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
\` 
a  \`
=====================================output=====================================
\` 
a  \`

================================================================================
`;
